--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Gerador de Senha-->
     <img class="logo" src="./assets/logo.png" alt="Gerador de senhas logo">
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres </span>
